:bug: First Step component layout break fix

--- a/src/components/ContainerForm.module.css
+++ b/src/components/ContainerForm.module.css
@@ -5,8 +5,14 @@
   border-radius: 1rem;
   padding: 1.2rem;
   display: flex;
-  gap: 11%;
   -webkit-box-shadow: 0px 0px 55px -40px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 55px -40px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 55px -40px rgba(0,0,0,0.75);
+}
+
+.wrapper_steps{
+  width: 60%;
+  height: 100%;
+  margin-left: 6.6rem;
+  /* background-color: aqua; */
 }
